tests/baselines/reference/redefineArray.errors.txt
tests/cases/compiler/redefineArray.ts(1,1): error TS2322: Type '(n: number, s: string) => number' is not assignable to type 'ArrayConstructor'.


==== tests/cases/compiler/redefineArray.ts (1 errors) ====
    Array = function (n:number, s:string) {return n;};
    ~~~~~
!!! error TS2322: Type '(n: number, s: string) => number' is not assignable to type 'ArrayConstructor'.